0.61
  * Print access denied messages on stderr

0.60
  * Dont filter comments in *.oreillynet.com - they have some funky
    JavaScript stuff and Mozilla renders the page not good if there
    are no HTML comments.
    Changed files: config/misc.zap
  * Use lists and "".join(list) in HtmlFilter.buffer2data, which gives
    a pretty good speedup when filtering big HTML files.
    Changed files: wc/filter/Rewriter.py
  * Always send our Accept-Encoding header, but remember what the
    client could understand.
    Changed files: wc/proxy/HttpClient.py, wc/proxy/HttpServer.py,
      wc/proxy/ClientServerMatchmaker.py
  * Only compress files when the client accepts the gzip encoding.
    Changed files: wc/filter/Compress.py
  * Some b0rked servers send a gzip encoding when the file is not
    compressed. So the decoding disables the decompression when such
    an error is encountered.
    Changed files: wc/proxy/GunzipStream.py
  * updated documentation and german translation
    Changed files: README, FAQ, po/de.po

0.59
  * - add missing import of _
    - correct warning of unknown encoding
    - use precompiled _http_re to match request lines
    - use content-length also if rewriting
    - syntax cleanups
    Changed files: wc/proxy/HttpServer.py
  * remove unsupported "compress" encoding from Accept-Encodings header
    Changed files: wc/proxy/HttpClient.py
  * import errno
    Changed files: wc/proxy/Connection.py
  * import sys
    Changed files: wc/proxy/Listener.py
  * use tuple of allowed Content-Encodings instead of regex
    Changed files: wc/filter/Compress.py
  * updated squid example config with no-digest peer option
    Changed files: README.squid
  * recompile HTML parser with bison 1.50 and flex 2.5.22
    Changed files: wc/parser/Makefile, wc/parser/htmllex.c,
      wc/parser/htmlparse.c wc/parser/htmlparse.h
  * enable the referrer HTTP header filter per default
    Changed files: config/header.zap
  * add allowed host acls for client connects