@@ -8,7 +8,7 @@
  parentproxyuser=""
  parentproxypass=""
  parentproxyport="3128"
- timeout="30"
+ timeout="1"
  obfuscateip="0"
  strict_whitelist="0"
  debuglevel="2"
