@@ -178,9 +178,9 @@ def proxy_poll (timeout=0.0):
                 if x not in e:
                     x.handle_write_event()
                     handlerCount += 1
-                    if time.time() - t > 0.1:
-                        #debug(BRING_IT_ON, 'wslow', '%4.1f'%(time.time()-t), 's', x)
-                        pass
+                    #if time.time() - t > 0.1:
+                    #    #debug(BRING_IT_ON, 'wslow', '%4.1f'%(time.time()-t), 's', x)
+                    #    pass
             except:
                 x.handle_error("poll error", sys.exc_type, sys.exc_value, tb=sys.exc_traceback)
         for x in r:
@@ -189,14 +189,12 @@ def proxy_poll (timeout=0.0):
                 if x not in e and x not in w:
                     x.handle_read_event()
                     handlerCount += 1
-                    if time.time() - t > 0.1:
-                        #debug(BRING_IT_ON, 'rslow', '%4.1f'%(time.time()-t), 's', x)
-                        pass
+                    #if time.time() - t > 0.1:
+                    #    #debug(BRING_IT_ON, 'rslow', '%4.1f'%(time.time()-t), 's', x)
+                    #    pass
             except:
                 x.handle_error("poll error", sys.exc_type, sys.exc_value, tb=sys.exc_traceback)
         return handlerCount
-
-    #_OBFUSCATE_IP = config['obfuscateip']
 
 
 def match_host (request):
